src/test/compile-fail/const-typeid-of.rs
// Copyright 2018 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

use std::any::TypeId;

struct A;

fn main() {
    const A_ID: TypeId = TypeId::of::<A>();
    //~^ ERROR `std::any::TypeId::of` is not yet stable as a const fn
}
